wrap comment-content area to avoid long comments from overflowing

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -503,6 +503,7 @@ th:hover .sort-icon.sort-up {
   border-radius: 0 5px 5px 5px;
   background-color: #e5f0f2;
   padding: 8px 10px;
+  word-wrap: break-word;
 }
 
 .comment-source {
